# minimal-auth-app

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: go.mod  go.sum  pyproject.toml
backend/app/: config.py  deps.py  logging_setup.py  main.py  rate_limit.py  schemas.py  store.py
backend/app/routers/: auth.py  me.py
backend/app/services/: password.py  token.py
backend/cmd/server/: main.go
backend/internal/auth/: password.go  password_test.go  token.go  token_test.go
backend/internal/config/: config.go
backend/internal/handlers/: auth.go  auth_test.go  me.go
backend/internal/httpx/: response.go
backend/internal/middleware/: auth.go
backend/internal/store/: sqlite.go
backend/tests/: test_auth.py  test_password.py  test_rate_limit.py  test_token.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: errors.ts  schemas.ts
frontend/src/pages/: Profile.tsx  SignIn.tsx  SignUp.tsx
frontend/src/test/: ProtectedRoute.test.tsx  errors.test.ts  schemas.test.ts  setup.ts
